moved synonyms down, fixed alignment of title

--- a/static/css/compoundview.css
+++ b/static/css/compoundview.css
@@ -30,6 +30,10 @@ body {
 	font-family: Verdana;
 }
 
+.clearfix {
+	overflow: auto;
+}
+
 .header {
 	font-size: 40px;
 	font-family: Georgia;
@@ -37,8 +41,19 @@ body {
 	text-align: left;
 }
 
-a.synonyms, #more-synonyms {
-	color: #303030;
+#compoundname {
+	width: 50%;
+	font: bold 1.75vw Georgia;
+}
+
+
+p.synonyms, #more-synonyms {
+	color: #404040;
+	font: 15px Verdana;
+}
+
+p.synonyms {
+	padding: 1% 3%;
 }
 
 #more-synonyms {
@@ -165,6 +180,11 @@ th.properties, td.properties, th.outstanding-orders, td.outstanding-orders, th.p
 
 td.properties-d, td.hazard{
 	padding: 1%;
+}
+
+td.hazard {
+	vertical-align: top;
+	padding: 2% 2%;
 }
 
 a.outgoing-link:link {
